corrected tags and categories

--- a/content/blog/2022-01-03-its_alive.md
+++ b/content/blog/2022-01-03-its_alive.md
@@ -8,7 +8,7 @@ categories = ["HomeLab", "Website"]
 
 [[images]]
   src = "img/Blog_header/glenn-carstens-peters-npxXWgQ33ZQ-unsplash.jpg"
-  alt = "Desert Scene"
+  alt = "Laptop"
   stretch = "stretchH"
 +++
 <!-- ----------------------------------- -->
